<package>
  <name>calvin_description</name>
  <version>1.0.0</version>
  <description>This package contains URDF descriptions of the VDDBEN robot. The complete
     robots are available in the directory "robots/". Each robot consists of
     a base and a top (see those two directories). Usually, a top is made up
     from several parts (see directory "parts/"), such as a laser scanner.</description>
  <maintainer email="mstypa@uos.de">Michael Stypa</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/calvin_description</url>

  <author>Michael Stypa</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>urdf</build_depend>
  <build_depend>uos_common_urdf</build_depend>
  <build_depend>xacro</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>urdf</run_depend>
  <run_depend>uos_common_urdf</run_depend>
  <run_depend>xacro</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>urdf</test_depend> -->
  <!-- <test_depend>uos_common_urdf</test_depend> -->
  <!-- <test_depend>xacro</test_depend> -->

</package>
