<package>
  <name>calvin_gazebo</name>
  <version>1.0.0</version>
  <description>This package contains launch files for starting up Calvin in the Gazebo simulator.</description>
  <maintainer email="mstypa@uos.de">Michael Stypa</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/calvin_gazebo</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Michael Stypa</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>calvin_description</build_depend>
  <build_depend>calvin_joint_commander</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>katana</build_depend>
  <build_depend>katana_arm_gazebo</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>robot_pose_ekf</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rostopic</build_depend>
  <build_depend>uos_gazebo_worlds</build_depend>
  <build_depend>uos_common_urdf</build_depend>
  <build_depend>volksbot_driver</build_depend>
  <build_depend>katana_description</build_depend>
  <build_depend>sick_tim3xx</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>calvin_description</run_depend>
  <run_depend>calvin_joint_commander</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>katana</run_depend>
  <run_depend>katana_arm_gazebo</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>uos_gazebo_worlds</run_depend>
  <run_depend>uos_common_urdf</run_depend>
  <run_depend>volksbot_driver</run_depend>
  <run_depend>katana_description</run_depend>
  <run_depend>sick_tim3xx</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>calvin_description</test_depend> -->
  <!-- <test_depend>calvin_joint_commander</test_depend> -->
  <!-- <test_depend>gazebo_ros</test_depend> -->
  <!-- <test_depend>katana</test_depend> -->
  <!-- <test_depend>katana_arm_gazebo</test_depend> -->
  <!-- <test_depend>controller_manager</test_depend> -->
  <!-- <test_depend>robot_pose_ekf</test_depend> -->
  <!-- <test_depend>robot_state_publisher</test_depend> -->
  <!-- <test_depend>rostopic</test_depend> -->
  <!-- <test_depend>uos_gazebo_worlds</test_depend> -->
  <!-- <test_depend>uos_common_urdf</test_depend> -->
  <!-- <test_depend>volksbot_driver</test_depend> -->
  <!-- <test_depend>katana_description</test_depend> -->
  <!-- <test_depend>sick_tim3xx</test_depend> -->

</package>
