<package>
  <name>calvin_pick_n_place</name>
  <version>1.0.0</version>
  <description>calvin_pick_n_place</description>
  <maintainer email="pdc@uos.de">pdc</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/calvin_pick_n_place</url>
  <!-- <url type="bugtracker"></url> -->

  <author>pdc</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>moveit_ros_planning_interface</test_depend> -->
  <!-- <test_depend>control_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>moveit_msgs</test_depend> -->
  <!-- <test_depend>object_recognition_msgs</test_depend> -->
  <!-- <test_depend>shape_msgs</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->

</package>
